added image to webpage

--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
 <h1>Hi, I am Kathi!</h1>
 <p>My first paragraph.</p>
 
+<img src="images/Kathi_small.jpg" alt="imgKathi" width="500">
+
+
 </body>
 </html>
