added linkedin text to github io page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>Hi, I am Kathi!</h1>
-<p>My first paragraph.</p>
+<p>I am a project assistant and PhD student in the Software Engineering Group (SERG) at the University of Klagenfurt. I received my MSc with distinction from the University of Klagenfurt in 2025 and my BSc from the TU Graz in 2023. My research focusses on build systems, change impact analysis, machine learning, and empirical studies in software engineering.</p>
 
 <img src="images/Kathi_small.jpg" alt="imgKathi" width="500">
 
