--- a/index.html
+++ b/index.html
@@ -1,17 +1,50 @@
----
-layout: default
-title: Home
----
-
+<!-- vibe coded-->
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>{{ page.title }}</title>
+  <link rel="stylesheet" href="/assets/style.css" />
+</head>
 <body>
+  <div class="layout">
+    <aside class="profile-card">
+      <img src="images/Kathi_small.jpg" alt="Profile photo" class="avatar">
+      <h1>Katharina Stengg</h1>
+      <p>PhD Student @ <a href="https://www.aau.at/en">University of Klagenfurt</a>
+        <br>Supervisor: <a href="https://pinzger.github.io">Prof. Dr. Martin Pinzger</a>
+      </p>
+      <ul class="contact-info">
+        <li><strong>Email:</strong> katharina.stengg@aau.at</li>
+        <!--<li><strong>Phone:</strong> +123 456 7890</li>-->
+        <li><strong>Location:</strong> Klagenfurt, Austria</li>
+      </ul>
+    </aside>
 
-<h1>Hi, I am Kathi!</h1>
-<p>I am a project assistant and PhD student in the Software Engineering Group (SERG) at the University of Klagenfurt. I received my MSc with distinction from the University of Klagenfurt in 2025 and my BSc from the TU Graz in 2023. My research focusses on build systems, change impact analysis, machine learning, and empirical studies in software engineering.</p>
+    <div class="main-content">
+      <header class="top-nav">
+        <nav>
+          <ul>
+            <li><a href="/">About</a></li>
+            <li><a href="/cv.html">CV</a></li>
+            <li><a href="/publications.html">Publications</a></li>
+            <li><a href="/teaching.html">Courses</a></li>
+            <li><a href="/random_stuff.html">Fun</a></li>
+          </ul>
+        </nav>
+      </header>
 
-<img src="images/Kathi_small.jpg" alt="imgKathi" width="500">
+      <main>
+        <h1>Hi, I am Kathi!</h1>
+        <p>I am a project assistant and PhD student in the Software Engineering Group (SERG) at the University of Klagenfurt. 
+            I received my MSc with distinction from the University of Klagenfurt in 2025 and my BSc from the TU Graz in 2023. 
+            My research focusses on build systems, change impact analysis, machine learning, and empirical studies in software engineering.</p>
+      </main>
 
-
+      <footer>
+        <p>&copy; <span id="year"></span> Katharina Stengg</p>
+    </footer>
+    </div>
+  </div>
 </body>
 </html>
