--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>{{ page.title }}</title>
+  <title>Katharina</title>
   <link rel="stylesheet" href="/assets/style.css" />
 </head>
 <body>
@@ -28,7 +28,7 @@
             <li><a href="/">About</a></li>
             <li><a href="/cv.html">CV</a></li>
             <li><a href="/publications.html">Publications</a></li>
-            <li><a href="/teaching.html">Courses</a></li>
+            <li><a href="/teaching.html">Teaching</a></li>
             <li><a href="/random_stuff.html">Fun</a></li>
           </ul>
         </nav>
