--- a/publications.html
+++ b/publications.html
@@ -29,7 +29,8 @@
             <li><a href="/cv.html">CV</a></li>
             <li><a href="/publications.html">Publications</a></li>
             <li><a href="/teaching.html">Courses</a></li>
-            <li><a href="/random_stuff.html">Fun</a></li>
+            <li><a href="/pr.html">PR</a></li>
+            <li><a href="/random_stuff.html">More about me :)</a></li>
           </ul>
         </nav>
       </header>
