--- a/pr.html
+++ b/pr.html
@@ -3,47 +3,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Curriculum Vitae</title>
+  <title>Katharina</title>
   <link rel="stylesheet" href="/assets/style.css" />
 </head>
 <body>
   <div class="layout">
-    <aside class="profile-card">
-      <img src="images/Kathi_small.jpg" alt="Profile photo" class="avatar">
-      <h1>Katharina Stengg</h1>
-      <p>PhD Student @ <a href="https://www.aau.at/en">University of Klagenfurt</a>
-        <br>Supervisor: <a href="https://pinzger.github.io">Prof. Dr. Martin Pinzger</a>
-      </p>
-      <ul class="contact-info">
-        <li><strong>Email:</strong> katharina.stengg@aau.at</li>
-        <!--<li><strong>Phone:</strong> +123 456 7890</li>-->
-        <li><strong>Location:</strong> Klagenfurt, Austria</li>
-      </ul>
-    </aside>
+    <div id="profile"></div>
 
     <div class="main-content">
-      <header class="top-nav">
-        <nav>
-          <ul>
-            <li><a href="/">About</a></li>
-            <li><a href="/cv.html">CV</a></li>
-            <li><a href="/publications.html">Publications</a></li>
-            <li><a href="/teaching.html">Courses</a></li>
-            <li><a href="/random_stuff.html">Fun</a></li>
-          </ul>
-        </nav>
-      </header>
+      <div id="header"></div>
 
       <main>
         add pr stuff 
         <a href="https://www.tugraz.at/fakultaeten/csbme/studies/funds-grants/deans-list/deans-list-2020">Dean's list 2020</a>
-        <img src="images/image_deans_list_2020.JPG" alt="Dean's list 2020" class="avatar">
+        <img src="images/pr/image_deans_list_2020.JPG" alt="Dean's list 2020" class="avatar">
     </main>
 
-      <footer>
-        <p>&copy; <span id="year"></span> Katharina Stengg</p>
-    </footer>
+      <div id="footer"></div>
+      <script src="main.js"></script>
+
     </div>
   </div>
 </body>
 </html>
+
+
+      
+
